style: fix layout box overflow, fix recent plans loading on refresh, restore colorful rings and tags

--- a/Frontend/src/components/layout.scss
+++ b/Frontend/src/components/layout.scss
@@ -8,6 +8,7 @@
 }
 
 .navbar {
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
